路由部分初步完成,带后续优化

--- a/pay-core/pom.xml
+++ b/pay-core/pom.xml
@@ -17,6 +17,12 @@
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>com.totoro.pay.parent</groupId>
+            <artifactId>pay-routing</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
