--- a/pay-routing/pom.xml
+++ b/pay-routing/pom.xml
@@ -14,6 +14,17 @@
 
     <dependencies>
 
+        <dependency>
+            <groupId>com.totoro.pay.parent</groupId>
+            <artifactId>pay-channel</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
