--- a/pay-web/pom.xml
+++ b/pay-web/pom.xml
@@ -30,13 +30,32 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
-        <dependency>
+   <!--     <dependency>
             <groupId>com.totoro.pay.parent</groupId>
             <artifactId>pay-core</artifactId>
             <version>${totoro.pay.version}</version>
         </dependency>
+-->
+        <dependency>
+            <groupId>com.totoro.pay.parent</groupId>
+            <artifactId>pay-routing</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
 
+        <dependency>
+            <groupId>com.totoro.pay.parent</groupId>
+            <artifactId>pay-channel</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
