路由部分初步完成,带后续优化(漏提交)

--- a/pay-mapper/pom.xml
+++ b/pay-mapper/pom.xml
@@ -24,6 +24,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>1.3.3.RELEASE</version>
                 <executions>
                     <execution>
                         <goals>
@@ -33,5 +34,6 @@
                 </executions>
             </plugin>
         </plugins>
+        <finalName>demo</finalName>
     </build>
 </project>
