--- a/pay-channel/pom.xml
+++ b/pay-channel/pom.xml
@@ -14,11 +14,12 @@
 
     <dependencies>
 
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
 
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>4.3.4.RELEASE</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -26,6 +27,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>1.3.3.RELEASE</version>
                 <executions>
                     <execution>
                         <goals>
@@ -35,5 +37,6 @@
                 </executions>
             </plugin>
         </plugins>
+        <finalName>demo</finalName>
     </build>
 </project>
