--- a/pay-core/pom.xml
+++ b/pay-core/pom.xml
@@ -30,6 +30,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>1.3.3.RELEASE</version>
                 <executions>
                     <execution>
                         <goals>
@@ -39,5 +40,6 @@
                 </executions>
             </plugin>
         </plugins>
+        <finalName>demo</finalName>
     </build>
 </project>
