--- a/pay-routing/pom.xml
+++ b/pay-routing/pom.xml
@@ -25,6 +25,12 @@
             <artifactId>guava</artifactId>
         </dependency>
 
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -32,6 +38,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>1.3.3.RELEASE</version>
                 <executions>
                     <execution>
                         <goals>
@@ -41,5 +48,6 @@
                 </executions>
             </plugin>
         </plugins>
+        <finalName>demo</finalName>
     </build>
 </project>
