--- a/pay-web/pom.xml
+++ b/pay-web/pom.xml
@@ -30,22 +30,10 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
-   <!--     <dependency>
+        <dependency>
             <groupId>com.totoro.pay.parent</groupId>
             <artifactId>pay-core</artifactId>
             <version>${totoro.pay.version}</version>
-        </dependency>
--->
-        <dependency>
-            <groupId>com.totoro.pay.parent</groupId>
-            <artifactId>pay-routing</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.totoro.pay.parent</groupId>
-            <artifactId>pay-channel</artifactId>
-            <version>1.0-SNAPSHOT</version>
         </dependency>
 
         <dependency>
@@ -63,6 +51,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>1.3.3.RELEASE</version>
                 <executions>
                     <execution>
                         <goals>
@@ -72,5 +61,6 @@
                 </executions>
             </plugin>
         </plugins>
+        <finalName>demo</finalName>
     </build>
 </project>
