--- a/pay-channel/pom.xml
+++ b/pay-channel/pom.xml
@@ -16,6 +16,11 @@
 
 
         <dependency>
+            <groupId>com.totoro.pay.parent</groupId>
+            <artifactId>pay-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
             <version>4.3.4.RELEASE</version>
