--- a/pay-core/pom.xml
+++ b/pay-core/pom.xml
@@ -23,6 +23,18 @@
             <artifactId>pay-routing</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.totoro.pay.parent</groupId>
+            <artifactId>pay-api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.totoro.pay.parent</groupId>
+            <artifactId>pay-mapper</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
